# RuView

./: CHANGELOG.md  README.md
.github/workflows/: cd.yml  ci.yml  pip-release.yml  python-ci.yml  sensing-server-docker.yml
archive/v1/: DEPRECATED.md  README.md
docs/: user-guide.md
docs/adr/: ADR-184-adr117-completion-pypi-trusted-publishing.md  ADR-185-python-p6-sota-bindings.md  ADR-186-training-progress-api.md  ADR-187-archive-v1-deprecation-honest-labeling.md  ADR-271-cognitum-oauth-resource-server.md  ADR-272-websocket-authentication-tickets.md  README.md
docs/integrations/: pypi-release.md
firmware/esp32-csi-node/: CMakeLists.txt
python/: Cargo.toml  README.md  pyproject.toml
python/bench/: test_bench_aether.py  test_bench_mat.py  test_bench_meridian.py
python/examples/: cross_room_calibrate.py  mat_triage.py  reid_from_csi.py
python/ruview-meta/: pyproject.toml
python/src/: lib.rs
python/src/bindings/: aether.rs  mat.rs  meridian.rs
python/tests/: aether_parity.rs  aether_weights_parity.rs  mat_parity.rs  meridian_parity.rs  test_aether.py  test_client_ws.py  test_mat.py  test_meridian.py
python/tests/golden/: aether_embedding.json  aether_embedding.sha256  aether_input.json  aether_loaded_embedding.json  aether_loaded_embedding.sha256  mat_input.json  mat_result.sha256  meridian_input.json  meridian_output.sha256
python/wifi_densepose/: __init__.py  aether.py  aether.pyi  mat.py  mat.pyi  meridian.py  meridian.pyi
python/wifi_densepose/client/: ws.py
scripts/: fix-markers.json
ui/: style.css  sw.js  sw.test.mjs
ui/components/: TrainingPanel.js
ui/observatory/js/: main.js
ui/services/: api.service.js  sensing.service.js  websocket-client.js  ws-ticket.js  ws-ticket.test.mjs
ui/utils/: quick-settings.js
v2/: Cargo.toml
v2/crates/homecore-migrate/: Cargo.toml  README.md
v2/crates/homecore-migrate/src/: config_entries.rs  lib.rs
v2/crates/homecore-migrate/src/storage_format/: mod.rs
v2/crates/ruview-auth/: Cargo.toml
v2/crates/ruview-auth/src/: jwks.rs  lib.rs  pkce.rs  principal.rs  verify.rs
v2/crates/ruview-auth/src/login/: callback.rs  client.rs  flow.rs  mod.rs  store.rs
v2/crates/ruview-auth/tests/: verifier_matrix.rs
v2/crates/wifi-densepose-aether/: Cargo.toml
v2/crates/wifi-densepose-aether/src/: embedding.rs  graph_transformer.rs  lib.rs  sona.rs  sparse_inference.rs
v2/crates/wifi-densepose-aether/tests/: golden_parity.rs
v2/crates/wifi-densepose-cli/: Cargo.toml
v2/crates/wifi-densepose-cli/src/: auth.rs  lib.rs  main.rs
v2/crates/wifi-densepose-mat/: Cargo.toml
v2/crates/wifi-densepose-mat/src/: lib.rs
v2/crates/wifi-densepose-mat/src/detection/: pipeline.rs
v2/crates/wifi-densepose-sensing-server/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/src/: bearer_auth.rs  browser_session.rs  lib.rs  main.rs  training_api.rs  ws_ticket.rs
v2/crates/wifi-densepose-sensing-server/tests/: auth_wiring.rs
v2/crates/wifi-densepose-train/: Cargo.toml
v2/crates/wifi-densepose-train/benches/: training_bench.rs
v2/crates/wifi-densepose-train/src/: metrics.rs
